Fixed features align and indicator images

--- a/index.css
+++ b/index.css
@@ -36,7 +36,9 @@ h3 {
 }
 
 #main_logo img {
-    width: 100%;
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 5%;
 }
 
@@ -46,14 +48,14 @@ h3 {
     right: 12%;
     height: 22%;
     width: 50%;
-    bottom: 33.5%;
+    bottom: 37%;
 }
 
 #app_store_logo {
     position: absolute;
     left: 37.5%;
     width: 24%;
-    bottom: 6%;
+    bottom: 6.5%;
 }
 
 #test_flight_form input {
@@ -101,7 +103,7 @@ h3 {
     right: 12%;
     width: 75%;
     height: 22%;
-    bottom: 19.5%;
+    bottom: 21%;
 }   
 
 #features, #screenshots {
@@ -143,16 +145,16 @@ h3 {
 
 #screenshots_description {
     position: absolute;
-    width: 80%;
+    width: 90%;
     top: 10%;
-    left: 10%;
+    right: 0;
 }
 
 #features_description {
     position: absolute;
-    width: 80%;
+    width: 90%;
     top: 10%;
-    left: 10%;
+    left: 0;
 }
 
 #social {
@@ -172,8 +174,8 @@ h3 {
 }
 
 #social .icon {
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
     margin-left: 25px;
     margin-right: 25px;
     margin-bottom: 25px;
@@ -181,15 +183,18 @@ h3 {
 }
 
 #social a img {
-    -webkit-transition: all .05s ease-in-out;
+  -webkit-transition: all 0.1s;
+  -moz-transition: all 0.1s;
 }
     
 #social a:hover img {
     -webkit-transform: scale(1.5);
+    -moz-transform: scale(1.5);
 }
 
 #social a:active img {
     -webkit-transform: scale(1);
+    -moz-transform: scale(1);
 }
 
 #producers {
@@ -254,21 +259,34 @@ h3 {
     height: 400px;
     opacity: .5;
 }
-.carousel-indicators {
-    bottom: 40%;
+#features .carousel-indicators {
+    top: 60%;
+    left: 13%;
 }
-.carousel-indicators li { cursor: pointer }
-.carousel-control {
-    width: 60px;
-    height: 0;
-    font-size: 100px;
-    background: transparent;
-    border: none;
-    padding-top: 30px;
+#screenshots .carousel-indicators {
+    top: 60%;
+    left: 55%;
 }
+/* Not active */
 .carousel-indicators li {
-    background-color: #999;
-    background-color: rgba(255,255,255,0.3);
+    background: url(images/btn-off.png) no-repeat;
+    background-size: 100% 100%;
+    width: 26px;
+    height: 25px;
+    cursor: pointer;
+    text-align:center;
+    border: none;
+    
+}
+/* Active */
+.carousel-indicators .active {
+    background: url(images/btn-on.png) no-repeat;
+    background-size: 100% 100%;
+    cursor: pointer;
+    width: 26px;
+    height: 25px;
+    text-align:center;
+    border: none;
 }
 .carousel-fade .carousel-inner .item {
     opacity: 0;
@@ -287,10 +305,11 @@ h3 {
 .carousel-fade .carousel-inner .next.left,
 .carousel-fade .carousel-inner .prev.right { opacity: 1 }
 .carousel-fade .carousel-control 
-	{ 
-	background: none;
-	z-index: 2
-	}
+{ 
+background: none;
+z-index: 2
+}
+
 @media only screen and (max-width:767px) { 
     h1 { font-size: 30px !important }
     .carousel-caption {
